# EchoLedger-Regional-Round-

./: README.md
EchoLedger-2.0-main/: deploy_mainnet.sh
EchoLedger-2.0-main/EchoLedger-2.0-main/: COMPETITION_SUBMISSION.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  DEPLOYMENT_QUICKSTART.md  LICENSE  README.md  TECHNICAL_ARCHITECTURE.md  TRANSFORMATION_COMPLETE.md  WCHL_2025_IMPLEMENTATION_PLAN.md  WCHL_2025_PITCH_DECK.md  WCHL_2025_SUBMISSION.md  WSL_DEPLOYMENT_GUIDE.md  deploy_enhanced.sh  dfx.json  echoledger_standalone.html  install.ps1  package-lock.json  package.json  wsl_quickstart.sh
EchoLedger-2.0-main/frontend/: package.json
EchoLedger-2.0-main/frontend/src/: App.js
EchoLedger-2.0-main/frontend/src/components/: EmergencyInterface.js
EchoLedger-2.0-main/services/phi-storage/: index.js
EchoLedger-2.0-main/src/directive_manager/: lib.rs  main.mo
EchoLedger-2.0-main/src/emergency_bridge/: emergency_bridge.did  lib.rs
EchoLedger-2.0-main/src/emergency_bridge/src/: tests.rs
EchoLedger-2.0-main/src/executor_ai/: Cargo.toml  executor_ai.did
EchoLedger-2.0-main/src/executor_ai/src/: lib.rs
EchoLedger-2.0-main/src/llm_canister/: Cargo.toml  llm_canister.did
EchoLedger-2.0-main/src/llm_canister/src/: lib.rs
