[workspace]
members = [
    "src/emergency_bridge",
    "src/executor_ai",
    "src/llm_canister"
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.15.2"
ic-cdk-macros = "0.15.0"
candid = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
ic-stable-structures = "0.6.0"
thiserror = "1.0.60"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 3
debug = true